asg/tests/fail/array/type_nested_value_nested_3x2_fail.leo
function main() {
    let b: [[u8; 2]; 3] = [[0; 3]; 2]; // initializer (incorrectly reversed ordering)
}